# mlops_project

./: .gitignore  LICENSE  README.md  data.dvc  data_statistics.md  pv_defection_data_drift_report.html  pyproject.toml  requirements.txt  requirements_ui.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/: cloudbuild.yaml  cloudbuild_containers.yaml  test_vertex.yaml  vertex_ai_train_cpu.yaml  vertex_ai_train_cpu_config.yaml  vertex_ai_train_gpu.yaml
.github/workflows/: data_change_test.yaml  export_diagram.yaml  staged_model.yaml  tests.yaml  tests_and_build.yaml
configs/: config.yaml  vertex_ai_train_cpu_config.yaml  vertex_ai_train_gpu_config.yaml
dockerfiles/: api.dockerfile  custom-config.yaml  frontend.dockerfile  monitoring_api.dockerfile  train.dockerfile  train_cpu.dockerfile  train_gpu.dockerfile  ui.dockerfile
mlops_project/: tasks.py
mlops_project/docs/: mkdocs.yaml
performance_tests/: api_performance_test.py  data_drift_quality_check.py  test_model.py
reports/: README.md
reports/figures/: system_diagram.drawio
src/pv_defection_classification/: balloon_db.py  bentoml_client.py  bentoml_service.py  data.py  data_drift.py  dataset_checker.py  evaluate.py  fastapi_client.py  fastapi_pv.py  frontend.py  model.py  model_tracing.py  pv_monitoring_api.py  train.py  train_initiallisation_wandb.py  train_wandb_gcp_model_storage.py  train_with_sweep.py  ui.py  verify_dataset.py  yolo_class_label.yaml
tests/: test_api.py  test_data.py  test_model.py  test_ui.py
tests/performance_tests/: api_performance_test.py
(+7 files in other folders)
