[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pv_defection_classification"
version = "0.0.1"
description = "Final project for MLOps course at DTU."
authors = [
  { name = "Group 53", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*",
"/Users/runner/work/mlops_project/mlops_project/config-3.py",
"/Users/runner/work/mlops_project/mlops_project/config.py",
"/Users/runner/work/mlops_project/mlops_project/config-2.py",
"/private/var/folders/84/5079cppj57s0lzywhyzcxkjc0000gn/T/tmpcw1oq0yj/_remote_module_non_scriptable.py"]
